	  directory.
	- HTMLDOC no longer uses Base-85 encoding for image data
	  when producing Level 2 and 3 PostScript output. It
	  appears that many printers and PostScript interpreters
	  cannot properly decode this data when the original
	  image data is not a multiple of 8 bits.
	- HTMLDOC now renders STRONG elements in boldface instead
	  of bold-italic to match the W3C recommendations.

    BUG FIXES

	- "$HFIMAGEn" didn't work in a header/footer string.
	- HTMLDOC could crash when rendering a table.
	- Book files were not used in CGI mode (STR #69)
	- Cookies were not sent in HTTP requests (STR #71)
	- Table cells were not aligned properly when the ROWSPAN
	  attribute was set to 1 (STR #73)
	- HTMLDOC crashed when rendering unresolved hyperlinks in
	  aligned images (STR #62)
	- Documented the HTMLDOC_NOCGI environment variable (STR
	  #63)
	- HTMLDOC sometimes crashed when rendering tables with
	  background colors (STR #65)
	- HTMLDOC would crash when writing encrypted strings
	  longer than 1024 bytes (STR #66)
	- HTMLDOC didn't set the data directory when running in
	  CGI mode on Windows.
	- HTMLDOC could crash when loading the Symbol.afm file
	  (STR #93)
	- HTMLDOC did not always honor HEIGHT attributes in table
	  rows.
	- Tables with a mix of colspan and rowspan sometimes
	  caused cells to be moved vertically outside the cell.


CHANGES IN HTMLDOC v1.8.24

    NEW FEATURES

	- HTMLDOC now provides limited cookie support via the
	  "--cookies" command-line option and via the cookies
	  passed by a browser in CGI mode.
	- HTMLDOC now features a CGI mode which provides PDF
	  conversion functionality for web servers.
	- HTMLDOC now generates a document outline for each
	  input file or URL in webpage mode; the outline shows
	  the title for the file and links to the first page
	  containing that file.
	- HTMLDOC now offers an "htmlsep" output type which
	  generates HTML output with a separate file for each
	  heading in the table of contents.