@@ -48,6 +48,11 @@
 	instead of bold-italic to match the W3C
 	recommendations.</li>
 
+	<li>HTMLDOC now automatically inserts a TR element before
+	a TD or TH element as needed to improve web site
+	compatibility; this also triggers a HTML error in
+	--strict mode.</li>
+
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
 	<li>"$HFIMAGEn" didn't work in a header/footer string.</li>
